--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "28.0.2"
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.simplemobiletools.clock"
@@ -41,6 +41,7 @@ android {
 }
 
 dependencies {
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
     implementation 'com.simplemobiletools:commons:4.7.10'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
