--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation 'com.shawnlin:number-picker:2.4.6'
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 }
