--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
 
     signingConfigs {
         release {
+            storeFile file('/home/cranz/dev/android/keystore.jks')
+            storePassword 'oqEY89BiAhgXQz56'
+            keyPassword 'oqEY89BiAhgXQz56'
+            keyAlias = 'key0'
 //            keyAlias keystoreProperties['keyAlias']
 //            keyPassword keystoreProperties['keyPassword']
 //           // storeFile file(keystoreProperties['storeFile'])
@@ -34,9 +38,9 @@ android {
             applicationIdSuffix ".debug"
         }
         release {
-//            minifyEnabled true
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            signingConfig signingConfigs.release
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
