--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 16
-        versionName "5.1.0"
+        versionName "broadcasts_v1.0.0-(5.1.0)"
         setProperty("archivesBaseName", "clock")
         vectorDrawables.useSupportLibrary = true
     }
