--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,9 +58,14 @@
             android:parentActivityName=".activities.MainActivity"/>
 
         <activity
-            android:name="com.simplemobiletools.commons.activities.AboutActivity"
+            android:name="com.simplemobiletools.clock.activities.AboutActivity"
             android:label="@string/about"
             android:parentActivityName=".activities.MainActivity"/>
+
+<!--        <activity-->
+<!--            android:name="com.simplemobiletools.commons.activities.AboutActivity"-->
+<!--            android:label="@string/about"-->
+<!--            android:parentActivityName=".activities.MainActivity"/>-->
 
         <activity
             android:name="com.simplemobiletools.commons.activities.LicenseActivity"
