--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation 'com.shawnlin:number-picker:2.4.6'
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+    implementation 'com.android.volley:volley:1.1.1'
 }
